Fixed stuff
-fixed container overlap
-carousel is smaller now, float left. Text on the right side.
-got rid of footer
-made font size smaller

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6240,7 +6240,7 @@ button.close {
   border-left-color: #fff;
 }
 .carousel {
-  position: relative;
+  float: left;
 }
 .carousel-inner {
   position: relative;
