--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -56,7 +56,7 @@ h3 {
 
 p,
 li {
-    font-size: 1.6em;
+    font-size: 1.25em;
     line-height: 1.25;
     color: #000;
     text-align: left;
@@ -148,11 +148,12 @@ hr {
 footer {
     background: #fff;
     background: rgba(255,255,255,0.9);
+    width: 100%;
+
 }
 
 footer p {
-    margin: 0;
-    padding: 25px 0;
+    padding: 10px;
 }
 
 @media screen and (min-width:768px) {
